--- a/Feeds/Feeds.Android/Feeds.Android.csproj
+++ b/Feeds/Feeds.Android/Feeds.Android.csproj
@@ -51,6 +51,9 @@
     <PackageReference Include="Microsoft.Azure.DocumentDB.Core">
       <Version>2.1.2</Version>
     </PackageReference>
+    <PackageReference Include="Xam.Plugins.Settings">
+      <Version>3.1.1</Version>
+    </PackageReference>
     <PackageReference Include="Xamarin.Forms" Version="3.2.0.871581" />
     <PackageReference Include="Xamarin.Android.Support.Design" Version="27.0.2.1" />
     <PackageReference Include="Xamarin.Android.Support.v7.AppCompat" Version="27.0.2.1" />
