--- a/Feeds/Feeds.UWP/Feeds.UWP.csproj
+++ b/Feeds/Feeds.UWP/Feeds.UWP.csproj
@@ -146,6 +146,9 @@
     <PackageReference Include="Microsoft.Azure.DocumentDB.Core">
       <Version>2.1.2</Version>
     </PackageReference>
+    <PackageReference Include="Xam.Plugins.Settings">
+      <Version>3.1.1</Version>
+    </PackageReference>
     <PackageReference Include="Xamarin.Forms" Version="3.2.0.871581" />
     <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform" Version="6.1.7" />
   </ItemGroup>
