--- a/Feeds/Feeds.iOS/Feeds.iOS.csproj
+++ b/Feeds/Feeds.iOS/Feeds.iOS.csproj
@@ -150,6 +150,9 @@
     <PackageReference Include="Microsoft.Azure.DocumentDB.Core">
       <Version>2.1.2</Version>
     </PackageReference>
+    <PackageReference Include="Xam.Plugins.Settings">
+      <Version>3.1.1</Version>
+    </PackageReference>
     <PackageReference Include="Xamarin.Forms" Version="3.2.0.871581" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
