Added donation view for donation list items. Applied filtering to donation list based on user's city. Improved navigation after form submissions.

--- a/Feeds/Feeds/Feeds.csproj
+++ b/Feeds/Feeds/Feeds.csproj
@@ -25,6 +25,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <EmbeddedResource Update="Views\DonationView.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="Views\MainTabbedPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
