Minor cosmetic updates

--- a/Feeds/Feeds.iOS/Feeds.iOS.csproj
+++ b/Feeds/Feeds.iOS/Feeds.iOS.csproj
@@ -162,4 +162,7 @@
       <Name>Feeds</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\logo.png" />
+  </ItemGroup>
 </Project>
