--- a/Feeds/Feeds.Android/Feeds.Android.csproj
+++ b/Feeds/Feeds.Android/Feeds.Android.csproj
@@ -94,13 +94,15 @@
     <Folder Include="Resources\drawable-xhdpi\" />
     <Folder Include="Resources\drawable-xxhdpi\" />
     <Folder Include="Resources\drawable-xxxhdpi\" />
-    <Folder Include="Resources\drawable\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Feeds\Feeds.csproj">
       <Project>{7FF1D4DC-8340-4B4B-9F8E-137CD53B39A7}</Project>
       <Name>Feeds</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\logo.png" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
